--- a/LiveSplit.StardewValley.csproj
+++ b/LiveSplit.StardewValley.csproj
@@ -91,6 +91,10 @@
     <Compile Include="Component.cs" />
     <Compile Include="MemoryModel.cs" />
     <Compile Include="Factory.cs" />
+    <Compile Include="MemoryModels\MemoryModel_4.cs" />
+    <Compile Include="MemoryModels\MemoryModel_3.cs" />
+    <Compile Include="MemoryModels\MemoryModel_2.cs" />
+    <Compile Include="MemoryModels\MemoryModel_5.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Settings.cs">
