does this fix update looping?

--- a/LiveSplit.StardewValley.csproj
+++ b/LiveSplit.StardewValley.csproj
@@ -114,7 +114,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Updates.xml" />
+    <Content Include="Components\Updates.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
