--- a/LiveSplit.StardewValley.csproj
+++ b/LiveSplit.StardewValley.csproj
@@ -96,6 +96,7 @@
     <Compile Include="MemoryModels\MemoryModel_3_36.cs" />
     <Compile Include="MemoryModels\MemoryModel_2_33.cs" />
     <Compile Include="MemoryModels\MemoryModel_5_4.cs" />
+    <Compile Include="MemoryModels\MemoryModel_5_5.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Settings.cs">
