--- a/LiveSplit.StardewValley.csproj
+++ b/LiveSplit.StardewValley.csproj
@@ -120,8 +120,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(TargetPath) $(ProjectDir)Components
-</PostBuildEvent>
+    <PostBuildEvent>cd "$(OutDir)"
+copy /Y "$(TargetFileName)" "$(ProjectDir)Components\$(TargetFileName)"</PostBuildEvent>
   </PropertyGroup>
   <Import Project="packages\Microsoft.VisualStudio.SDK.EmbedInteropTypes.15.0.34\build\Microsoft.VisualStudio.SDK.EmbedInteropTypes.targets" Condition="Exists('packages\Microsoft.VisualStudio.SDK.EmbedInteropTypes.15.0.34\build\Microsoft.VisualStudio.SDK.EmbedInteropTypes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
