--- a/LiveSplit.StardewValley.csproj
+++ b/LiveSplit.StardewValley.csproj
@@ -99,6 +99,7 @@
     <Compile Include="MemoryModels\MemoryModel_5_6.cs" />
     <Compile Include="MemoryModels\MemoryModel_5_5.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SplitState.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Settings.cs">
       <SubType>UserControl</SubType>
