--- a/LiveSplit.StardewValley.csproj
+++ b/LiveSplit.StardewValley.csproj
@@ -99,6 +99,8 @@
     <Compile Include="MemoryModels\MemoryModel_5_6_x86.cs" />
     <Compile Include="MemoryModels\MemoryModel_5_6.cs" />
     <Compile Include="MemoryModels\MemoryModel_5_5.cs" />
+    <Compile Include="MemoryModels\MemoryModel_6_8_x86.cs" />
+    <Compile Include="MemoryModels\MemoryModel_6_8.cs" />
     <Compile Include="MemoryModels\MemoryModel_6_3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SplitState.cs" />
