--- a/MemoryHelper/packages.config
+++ b/MemoryHelper/packages.config
@@ -1,20 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
-  <package id="Microsoft.Diagnostics.NETCore.Client" version="0.2.410101" targetFramework="net461" />
-  <package id="Microsoft.Diagnostics.Runtime" version="3.1.512801" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net461" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
-  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Diagnostics.NETCore.Client" version="0.2.621003" targetFramework="net481" />
+  <package id="Microsoft.Diagnostics.Runtime" version="3.1.512801" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Configuration" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Logging" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Options" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Primitives" version="9.0.4" targetFramework="net481" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net481" />
+  <package id="System.Collections.Immutable" version="9.0.4" targetFramework="net481" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.4" targetFramework="net481" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net481" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net481" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net481" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net481" />
 </packages>
